Traditional demod scheme used

--- a/tx/Makefile
+++ b/tx/Makefile
@@ -1,21 +1,17 @@
-CXX=clang++
+CXX=g++
 
 all: run clean
 
 run: tx.exe
-	cp tx.exe ..
-	../tx.exe
+	tx.exe
 .phony: run
 
-tx.exe: tx.o ../librtaudio.dll.a
+tx.exe: tx.o ../librtaudio.a
 	$(CXX) $^ -lksuser -lmfplat -lmfuuid -lwmcodecdspuuid -lwinmm -lole32 -lkernel32 -luser32 -lgdi32 -lwinspool -lshell32 -lole32 -loleaut32 -luuid -lcomdlg32 -ladvapi32 -lpthread -o $@
-
-../librtaudio.dll.a: ../librtaudio.dll
 
 tx.o: tx.cpp ../RtAudio.h ../ThreadSafeQueue.hpp
 	$(CXX) $< -c -std=c++11 -o $@ -I../
 
 clean:
-	-rm -f *.o *.exe
-	-rm -f ../*.exe
+	del *.o *.exe 2>nul
 .phony: clean
