--- a/tx/Makefile
+++ b/tx/Makefile
@@ -13,5 +13,5 @@ tx.o: tx.cpp ../RtAudio.h ../ThreadSafeQueue.hpp
 	$(CXX) $< -c -std=c++11 -o $@ -I../
 
 clean:
-	del *.o *.exe 2>nul
+	-rm *.o *.exe
 .phony: clean
