ThreadSafeQueue abandoned Reconstructing the whole thing

--- a/tx/Makefile
+++ b/tx/Makefile
@@ -9,7 +9,7 @@ run: tx.exe
 tx.exe: tx.o ../librtaudio.a
 	$(CXX) $^ -lksuser -lmfplat -lmfuuid -lwmcodecdspuuid -lwinmm -lole32 -lkernel32 -luser32 -lgdi32 -lwinspool -lshell32 -lole32 -loleaut32 -luuid -lcomdlg32 -ladvapi32 -lpthread -o $@
 
-tx.o: tx.cpp ../RtAudio.h ../ThreadSafeQueue.hpp ../dsp.hpp
+tx.o: tx.cpp ../RtAudio.h ../fifo.hpp ../dsp.hpp
 	$(CXX) $< -c -std=c++11 -o $@ -I../
 
 clean:
