--- a/rx/Makefile
+++ b/rx/Makefile
@@ -1,5 +1,11 @@
 CXX=g++
 
+ifeq ($(AVX), off)
+	AVXFLAG=
+else
+	AVXFLAG=-mavx2 -mfma
+endif
+
 all: run clean
 
 run: rx.exe
@@ -10,7 +16,7 @@ rx.exe: rx.o ../librtaudio.a
 	$(CXX) $^ -lksuser -lmfplat -lmfuuid -lwmcodecdspuuid -lwinmm -lole32 -lkernel32 -luser32 -lgdi32 -lwinspool -lshell32 -lole32 -loleaut32 -luuid -lcomdlg32 -ladvapi32 -lpthread -o $@
 
 rx.o: rx.cpp ../RtAudio.h ../fifo.hpp ../dsp.hpp
-	$(CXX) $< -c -std=c++11 -o $@ -I../
+	$(CXX) $< -c -std=c++11 $(AVXFLAG) -o $@ -I../
 
 clean:
 	-rm *.o *.exe
